scss/main.css
/* ... */
.xmb-title.settings .xmb-contents .submenu.three.active .subtext {
  opacity: 1;
}

.xmb-title.music .xmb-contents {
  margin-right: 25px !important;
}
.xmb-title.music .xmb-contents .submenu.one {
  margin-left: 10px;
  padding-bottom: 20px;
}

.xmb-title.messages .xmb-contents {
  margin-top: 15px;
  margin-left: 40px;
}
.xmb-title.messages .xmb-contents .submenu.one {
  padding-bottom: 20px;
}

.xmb-title.music .xmb-contents {
  margin-left: 10px;
}
.xmb-title.music .xmb-contents .submenu.one {
  padding-bottom: 20px;
}

.xmb-title.games .xmb-contents {
  margin-top: 70px;
  margin-left: 10px;
  margin-right: 0 !important;
}
.xmb-title.games .xmb-contents .submenu.one {
  padding-bottom: 20px;
}
.xmb-title.games .xmb-contents .submenu.two.active {
  margin-top: 200px;
}

.about-bg {
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  transition: opacity 300ms;
  opacity: 1;
  background: -webkit-linear-gradient(253deg, rgb(46, 29, 158) 0%, rgb(21, 18, 84) 72%);
}
.about-bg .infowrapper {
  border: 1px solid;
  border-radius: 15px;
  z-index: -1;
  width: 50%;
  position: absolute;
  left: 50%;
  top: 45%;
  width: 40%;
  height: auto;
  background: -webkit-linear-gradient(253deg, rgb(21, 18, 84) 10%, rgb(0, 0, 0) 100%);
  text-align: left;
  padding: 20px;
  line-height: 30px;
}
.about-bg .infowrapper h1 {
  font-size: 2rem;
  border-bottom: 2px solid white;
  padding: 20px 0px;
  margin-top: -10px;
}/*# sourceMappingURL=main.css.map */
/* Portfolio customizations */
body {
  opacity: 0;
  transition: opacity 450ms ease-in;
}

body.app-ready {
  opacity: 1;
}

.back-vid,
#menu,
.clock {
  transition-duration: 450ms;
}

.xmb-contents .submenu {
  cursor: pointer;
}

/* Requested refinements: wider open section + 3 info levels */
.xmb-title.active .xmb-contents {
  margin-left: 28px !important;
  min-width: 520px;
}

.xmb-title.active .xmb-contents .context {
  min-width: 430px;
}

.xmb-contents .context .subtext {
  margin-top: 6px;
  font-size: 0.95rem !important;
  line-height: 1.2;
}

.xmb-contents .context .subtext2 {
  margin-top: 4px;
  font-size: 0.78rem !important;
  opacity: 0.9;
  line-height: 1.2;
}

.xmb-title.settings .xmb-contents .submenu .context .subtext {
  position: absolute;
  margin-left: 10px;
  margin-top: 10px;
}

.xmb-title.settings .xmb-contents .submenu .context .subtext2 {
  position: absolute;
  margin-left: 10px;
  margin-top: 28px;
  opacity: 0;
}

.xmb-title.settings .xmb-contents .submenu.two.active .context .subtext2,
.xmb-title.settings .xmb-contents .submenu.three.active .context .subtext2,
.xmb-title.settings .xmb-contents .submenu.one .context .subtext2 {
  opacity: 1;
}

.xmb-title.settings .xmb-contents .submenu.one.inactive .context .subtext2 {
  opacity: 0;
}

